added code from code.pen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  	<meta name="T. Castle" content="Portfolio" />
+  	<title>T.Castle Portfolio </title>
+		<!-- add external style sheet -->
+  	<link rel="stylesheet" type="text/css" href="main.css">
+		<!-- add Bootstrap 3 -->
+  	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+  	<!-- add Google Fonts -->
+  	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300italic' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
+	</head>
+	<body>
+		
+		 <!-- Nav bar -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand brandFont" href="#" style="font-family: 'Poiret One', cursive;font-size: 25px; color: #555">&#9814 T.Castle</a>
+
+      </div>
+      <!-- navbar-header -->
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+  <!-- Intro section -->
+  <div class="category" id="intro">
+    <div class="sectionText" id="introText">
+      <h1>T. Castle: Web Strategy</h1>
+      <h3>Let's have a meaningful web experience!</h3>
+      <hr />
+      <div class="container" id="socialMedia">
+        <a href="http://www.freecodecamp.com/tealynsea" class="btn btn-default button" target="_blank">freeCodeCamp</a>
+        <a href="https://twitter.com/TeaLynCastle" class="btn btn-default button" target="_blank">Twitter</a>
+        <a href="https://www.linkedin.com/in/teresa-castle-03698893" class="btn btn-default button" target="_blank">Linkedin</a>
+        <a href="https://github.com/tealynsea" class="btn btn-default button" target="_blank">GitHub</a>
+      </div>
+      <!-- socialMedia -->
+    </div>
+      <!-- sectionText -->
+  </div>
+      <!-- category/intro -->
+  <!-- About section  -->
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img class="img-responsive" src="https://www.dropbox.com/s/bbws2pzcsvj6d8a/camera-820018_640.jpg?raw=1" alt="camera" />
+        </div>
+        <!-- col-sm-6 -->
+        <div class="col-sm-6">
+          <div class="sectionText" id="aboutText">
+            <h2>About Me....</h2>
+            <p class="lead">I am a Denver based web developer and software tester. I've had experience developing in HTML5, CSS3, Javascript, Express.js, Node.js, Mongoose.js, and MongoDB...the Full Stack! My passion is front-end development and meaningful user experiences.</p>
+            <p>In my free time, I like to crochet viking helmets, read fan-fiction, play epic role-playing video games, and dream of living in Costa Rica.</p>
+          </div>
+          <!-- sectionText -->
+        </div><!-- col-sm-6/2 -->
+      </div>
+      <!-- row -->
+    </div>
+    <!-- container -->
+  </div>
+  <!-- about -->
+  <div class="category" id="portfolio">
+    <div class="container-fluid" id="background">
+      <h2>My Work</h2>
+      <hr />
+      <div class="row ">
+        <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/pen/gbxNrp" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/0i49f9za7scdtxu/neonclock.PNG?raw=1" alt="neon clock project" style="width:200px; height:200px" />
+          </a>
+        </div><!-- col-md-3 -->
+        <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/pen/azazpN" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/77o4bwneva5a44e/angular.PNG?raw=1" alt="to do angular project" style="width: 200px; height:200px" />
+          </a>
+        </div><!-- col-md-3 -->
+        <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/pen/qEgVVp" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/ochysnrtx0za9cj/mapAPI.PNG?raw=1" alt="Google Map project" style="width:200px; height:200px" />
+          </a>
+        </div><!-- col-md-3 -->
+        <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/pen/MYGvje" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/b4686gi563xd0cs/snakeGame.PNG?raw=1" alt="html snake project" style="width:200px; height:200px" />
+            </a>
+          </div><!-- col-md-3 -->
+          <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/pen/xbBRaG" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/3t2tqxo6h4xwxns/jQuery.PNG?raw=1" alt="jQuery project" style="width:200px; height:200px" />
+            </a>
+          </div><!-- col-md-3 -->
+        </div><!-- row -->
+      </div>
+      <!-- background text -->
+    </div>
+    <!-- portfolio -->
+    
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Let's connect</h1>
+              <ul>
+                <li><a href="http://www.freecodecamp.com/tealynsea" class='button' target="_blank"><span class="glyphicon glyphicon-fire" aria-hidden="true">freeCodeCamp</span></a></li>
+                <li><a href="https://www.linkedin.com/in/teresa-castle-03698893" class='button' target="_blank"><i class="fa fa-linkedin"> Linkedin</i></a></li>
+                <li><a href="https://twitter.com/TeaLynCastle" class='button' target="_blank"><i class="fa fa-twitter"> Twitter</i></a></li>
+                <li><a href="https://github.com/tealynsea" class='button' target="_blank"><i class="fa fa-github"> GitHub</i></a></li>
+              </ul>
+          </div><!-- col-md-6 1 -->
+          <div class="col-md-6" id="telephone">
+            <img src="https://www.dropbox.com/s/ryxfzu6fkzvf11r/phone-499991_640.jpg?raw=1" alt="picture of telephone" class="img-responsive" />
+          </div><!-- col-md-6 -->
+        </div><!-- row -->
+      </div><!-- container --> 
+    </div><!-- #contact -->
+  
+  <footer>
+    <a href="#">Home &#9635;</a>
+    <a href="#about">About &#9635;</a>
+    <a href="#portfolio">Portfolio &#9635;</a>
+    <a href="#contact">Connect</a>
+    <p>&copy; T L Castle 2015</p>
+  </footer>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>	
+	</body>
+</html>
