Updated some text and some work

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <!-- Intro section -->
   <div class="category" id="intro">
     <div class="sectionText" id="introText">
-      <h1>T. Castle: Web Strategy</h1>
-      <h3>Let's have a meaningful web experience!</h3>
+      <h1>T. Castle: Digital Storytelling</h1>
+      <h3>Telling stories around the digital campfire!</h3>
       <hr />
       <div class="container" id="socialMedia">
         <a href="http://www.freecodecamp.com/tealynsea" class="btn btn-default button" target="_blank">freeCodeCamp</a>
@@ -77,7 +77,7 @@
           <div class="sectionText" id="aboutText">
             <h2>About Me....</h2>
             <p class="lead">I am a Denver based web developer and software tester. I've had experience developing in HTML5, CSS3, Javascript, Express.js, Node.js, Mongoose.js, and MongoDB...the Full Stack! My passion is front-end development and meaningful user experiences.</p>
-            <p>In my free time, I like to crochet viking helmets, read fan-fiction, play epic role-playing video games, and dream of living in Costa Rica.</p>
+            <p>In my free time, I like to crochet things nerds would like, listen to story slams, play epic role-playing video games, and dream of living in Costa Rica.</p>
           </div>
           <!-- sectionText -->
         </div><!-- col-sm-6/2 -->
@@ -89,19 +89,25 @@
   <!-- about -->
   <div class="category" id="portfolio">
     <div class="container-fluid" id="background">
-      <h2>My Work</h2>
+      <h2>Just a little something...</h2>
       <hr />
       <div class="row ">
         <div class="col-sm-3 col-md-3 col-lg-3">
-          <a href="http://codepen.io/tealynsea/pen/gbxNrp" class="thumbnail">
+          <a href="http://codepen.io/tealynsea/full/gbxNrp" class="thumbnail">
             <span class="rollover"></span>
             <img src="https://www.dropbox.com/s/0i49f9za7scdtxu/neonclock.PNG?raw=1" alt="neon clock project" style="width:200px; height:200px" />
           </a>
         </div><!-- col-md-3 -->
         <div class="col-sm-3 col-md-3 col-lg-3">
-          <a href="http://codepen.io/tealynsea/pen/azazpN" class="thumbnail">
+          <a href="http://codepen.io/tealynsea/full/WwEeyg" class="thumbnail">
             <span class="rollover"></span>
-            <img src="https://www.dropbox.com/s/77o4bwneva5a44e/angular.PNG?raw=1" alt="to do angular project" style="width: 200px; height:200px" />
+            <img src="https://www.dropbox.com/s/gle3aa24lor2plx/Screen%20Shot%202016-04-15%20at%205.33.37%20PM.png?raw=1" alt="to do angular project" style="width: 200px; height:200px" />
+          </a>
+        </div><!-- col-md-3 -->
+        <div class="col-sm-3 col-md-3 col-lg-3">
+          <a href="http://codepen.io/tealynsea/full/QyGeQM/" class="thumbnail">
+            <span class="rollover"></span>
+            <img src="https://www.dropbox.com/s/vqk1i7sadhqfj03/Screen%20Shot%202016-04-15%20at%205.46.33%20PM.png?raw=1" alt="to do angular project" style="width: 200px; height:200px" />
           </a>
         </div><!-- col-md-3 -->
         <div class="col-sm-3 col-md-3 col-lg-3">
